--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#FFFFFF</color> <!-- for react-native-splash-screen -->
-    <color name="primary_dark">#455A64</color> <!-- for react-native-splash-screen -->
+    <color name="background">#F0F1F6</color> <!-- for react-native-splash-screen -->
+    <color name="primary_dark">#607D8B</color> <!-- for react-native-splash-screen -->
     <color name="primary">#607D8B</color>
-
-    <!--
-    <color name="primary_light">#CFD8DC</color>
-    <color name="accent">#FFC107</color>
-    <color name="_primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
-    -->
 </resources>
