--- a/ios/HelloWorld/Base.lproj/LaunchScreen.xib
+++ b/ios/HelloWorld/Base.lproj/LaunchScreen.xib
@@ -24,7 +24,7 @@
             <color key="backgroundColor" red="0.37647058823529411" green="0.49019607843137253" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="tKf-CX-hXl"/>
+            <viewLayoutGuide key="safeArea" id="joz-0w-naR"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
