--- a/android/app/src/main/res/drawable/splash_screen.xml
+++ b/android/app/src/main/res/drawable/splash_screen.xml
@@ -2,8 +2,8 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item android:drawable="@color/primary" />
+  <item android:drawable="@color/background" />
 
-  <item android:drawable="@mipmap/logo" android:gravity="center" />
+  <item android:drawable="@drawable/logo" android:gravity="center" />
 
 </layer-list>
