--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@color/primary</item>
+        <item name="android:windowBackground">@color/background</item>
         <item name="android:statusBarColor">@color/primary</item>
     </style>
 
