--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="background">#F0F1F6</color> <!-- for react-native-splash-screen -->
-    <color name="primary_dark">#607D8B</color> <!-- for react-native-splash-screen -->
+    <color name="background">#F0F1F6</color>
     <color name="primary">#607D8B</color>
+    <color name="primary_dark">#607D8B</color>
 </resources>
