--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="background">#F0F1F6</color>
     <color name="primary">#607D8B</color>
-    <color name="primary_dark">#607D8B</color>
+    <color name="primaryDark">#607D8B</color>
 </resources>
